--- a/DspTrarck/DspTrarck.csproj
+++ b/DspTrarck/DspTrarck.csproj
@@ -245,13 +245,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BPEntityData.cs" />
-    <Compile Include="BPDataSystem.cs" />
+    <Compile Include="BPData.cs" />
+    <Compile Include="BPDataWriter.cs" />
+    <Compile Include="BPDataReader.cs" />
     <Compile Include="FactoryBP.cs" />
     <Compile Include="PlanetCoordinate.cs" />
     <Compile Include="PlayerAction_Build_Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrarckPlugin.cs" />
+    <Compile Include="YH\BinaryHelper.cs" />
+    <Compile Include="YH\KeyManager.cs" />
     <Compile Include="YH\ReflectionUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
