--- a/DspTrarck/DspTrarck.csproj
+++ b/DspTrarck/DspTrarck.csproj
@@ -41,10 +41,6 @@
     <Reference Include="BepInEx">
       <HintPath>Libs\BepInEx.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Libs\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -249,6 +245,7 @@
     <Compile Include="BPDataWriter.cs" />
     <Compile Include="BPDataReader.cs" />
     <Compile Include="FactoryBP.cs" />
+    <Compile Include="MultiSelector.cs" />
     <Compile Include="PlanetCoordinate.cs" />
     <Compile Include="PlayerAction_Build_Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
