--- a/DspTrarck/DspTrarck.csproj
+++ b/DspTrarck/DspTrarck.csproj
@@ -245,6 +245,7 @@
     <Compile Include="BPDataWriter.cs" />
     <Compile Include="BPDataReader.cs" />
     <Compile Include="FactoryBP.cs" />
+    <Compile Include="FactoryBPUI.cs" />
     <Compile Include="MultiSelector.cs" />
     <Compile Include="PlanetCoordinate.cs" />
     <Compile Include="PlayerAction_Build_Patch.cs" />
