实现和已经存在的物体连接。

--- a/DspTrarck/DspTrarck.csproj
+++ b/DspTrarck/DspTrarck.csproj
@@ -246,6 +246,7 @@
     <Compile Include="BPDataReader.cs" />
     <Compile Include="FactoryBP.cs" />
     <Compile Include="FactoryBPUI.cs" />
+    <Compile Include="FactoryHelper.cs" />
     <Compile Include="MultiSelector.cs" />
     <Compile Include="PlanetCoordinate.cs" />
     <Compile Include="PlayerAction_Build_Patch.cs" />
