--- a/DspTrarck/DspTrarck.csproj
+++ b/DspTrarck/DspTrarck.csproj
@@ -283,7 +283,8 @@
     <Compile Include="BPData.cs" />
     <Compile Include="BPDataWriter.cs" />
     <Compile Include="BPDataReader.cs" />
-    <Compile Include="BuildTool_BluePrint.cs" />
+    <Compile Include="BuildTool_BluePrint_Create.cs" />
+    <Compile Include="BuildTool_BluePrint_Build.cs" />
     <Compile Include="PlayerAction_Build_Patch.cs" />
     <Compile Include="FactoryBP.cs" />
     <Compile Include="FactoryBPUI.cs" />
