--- a/DspTrarck/DspTrarck.csproj
+++ b/DspTrarck/DspTrarck.csproj
@@ -296,6 +296,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrarckPlugin.cs" />
     <Compile Include="YH\BinaryHelper.cs" />
+    <Compile Include="YH\FileSystem.cs" />
     <Compile Include="YH\KeyManager.cs" />
     <Compile Include="YH\Math.cs" />
     <Compile Include="YH\ReflectionUtils.cs" />
